--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/swagger": "^11.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ejs": "^3.1.10",
     "es-toolkit": "^1.36.0",
     "js-yaml": "^4.1.0",
     "minio": "^8.0.5",
@@ -39,6 +40,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.7",
