chore: 添加了 nginx config 的注释

--- a/template/nginx.conf
+++ b/template/nginx.conf
@@ -19,6 +19,7 @@ server {
 server {
     listen       80;
     listen  [::]:80;
+    # 此处可以通过使用 http://dev.my-project.192.168.121.141.nip.io 来访问到
     server_name  ~^(?<subdomain>.*dev\.my-project.*)$;
 
     location / {
