--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.5",
+    "@types/dockerode": "^3.3.38",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dockerode": "^4.0.6",
     "ejs": "^3.1.10",
     "es-toolkit": "^1.36.0",
     "js-yaml": "^4.1.0",
