--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "start:macos-w": "cross-env NODE_ENV=macos nest start --debug --watch",
+    "start:ubuntu-w": "cross-env NODE_ENV=ubuntu nest start --debug --watch",
     "build": "nest build",
-    "start": "nest start",
-    "start:macos": "cross-env NODE_ENV=macos nest start --watch",
-    "start:win10": "cross-env NODE_ENV=win10 nest start --watch",
-    "start:watch": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "copy-env": "cp .env.macos .env.ubuntu config.yaml dist/",
+    "preview:dist-macos": "cross-env NODE_ENV=macos node dist/main ",
+    "preview:dist-ubuntu": "cross-env NODE_ENV=ubuntu node dist/main",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\""
   },
@@ -26,6 +25,7 @@
     "@types/dockerode": "^3.3.38",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cross-env": "^7.0.3",
     "dockerode": "^4.0.6",
     "ejs": "^3.1.10",
     "es-toolkit": "^1.36.0",
@@ -48,7 +48,6 @@
     "@types/node": "^22.10.7",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
-    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
