feat: 实现了根据 ejs 动态写入 nginx 配置文件

--- a/.env.macos
+++ b/.env.macos
@@ -1,5 +1,11 @@
 # Db Configs
-MONGODB_URL=mongodb://127.0.0.1:27017/nginx-config-center
+MONGODB_URL=mongodb://127.0.0.1:27017/nginx-config-center\
+
+# Docker Configs
+DOCKER_SOCKET_PATH=/var/run/docker.sock
+
+# Nginx Configs
+NGINX_CONFIG_PATH=/Users/tkunl/Workspace/DockerContainers/nginx/conf.d
 
 # Minio Configs
 MINIO_PORT=9000
