--- a/.env.ubuntu
+++ b/.env.ubuntu
@@ -1,6 +1,12 @@
 # Db Configs
 MONGODB_URL=mongodb://192.168.121.141:27017/nginx-config-center
 
+# Docker Configs
+DOCKER_SOCKET_PATH=/var/run/docker.sock
+
+# Nginx Configs
+NGINX_CONFIG_PATH=/home/tkunl/Docker/nginx/conf.d
+
 # Minio Configs
 MINIO_PORT=9000
 MINIO_HOST=192.168.121.141
