--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start:macos-w": "cross-env NODE_ENV=macos nest start --debug --watch",
-    "start:ubuntu-w": "cross-env NODE_ENV=ubuntu nest start --debug --watch",
+    "start:macos": "cross-env NODE_ENV=macos nest start --debug --watch",
+    "start:ubuntu": "cross-env NODE_ENV=ubuntu nest start --debug --watch",
     "build": "nest build",
     "copy-env": "cp .env.macos .env.ubuntu .env.docker config.yaml dist/",
-    "preview:dist-macos": "cross-env NODE_ENV=macos node dist/main ",
-    "preview:dist-ubuntu": "cross-env NODE_ENV=ubuntu node dist/main",
+    "preview-dist:macos": "cross-env NODE_ENV=macos node dist/main ",
+    "preview-dist:ubuntu": "cross-env NODE_ENV=ubuntu node dist/main",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\""
   },
