feat: 添加了锁机制

--- a/.env.macos
+++ b/.env.macos
@@ -1,5 +1,5 @@
 # Db Configs
-MONGODB_URL=mongodb://127.0.0.1:27017/nginx-config-center\
+MONGODB_URL=mongodb://127.0.0.1:27017/nginx-config-center
 
 # Docker Configs
 DOCKER_SOCKET_PATH=/var/run/docker.sock
