--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-yaml": "^4.1.0",
     "minio": "^8.0.5",
     "mongoose": "^8.14.0",
+    "proper-lockfile": "^4.1.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -46,6 +47,7 @@
     "@types/express": "^5.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.7",
+    "@types/proper-lockfile": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "eslint": "^9.18.0",
