--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start:macos": "cross-env NODE_ENV=macos nest start --debug --watch",
-    "start:ubuntu": "cross-env NODE_ENV=ubuntu nest start --debug --watch",
+    "start:macos": "cross-env NODE_ENV=macos nest start --debug",
+    "start:ubuntu": "cross-env NODE_ENV=ubuntu nest start --debug",
+    "start:macos-w": "cross-env NODE_ENV=macos nest start --debug --watch",
+    "start:ubuntu-w": "cross-env NODE_ENV=ubuntu nest start --debug --watch",
     "build": "nest build",
     "copy-env": "cp .env.macos .env.ubuntu .env.docker config.yaml dist/",
     "preview-dist:macos": "cross-env NODE_ENV=macos node dist/main ",
