feat: removed minio keys

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,9 @@ pids
 
 .lock
 
+# Ignore environment files
+.evn.macos
+.env.ubuntu
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
