--- a/.env.docker
+++ b/.env.docker
@@ -10,5 +10,5 @@ NGINX_CONFIG_PATH=/etc/nginx/conf.d
 # Minio Configs
 MINIO_PORT=9000
 MINIO_HOST=127.0.0.1
-MINIO_ACCESS_KEY=70DKLQc2eb5yJ3OBcRkp
-MINIO_SECRET_KEY=hVuDqjwBa884tMBrMr6GXpjfwiSyijscBkdv6bkA
+MINIO_ACCESS_KEY=your access key
+MINIO_SECRET_KEY=your secret key
